# scriptful

./: .travis.yml  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/codecs/: dec.rs  enc.rs  mod.rs
src/codecs/simple/: dec.rs  enc.rs  mod.rs
src/core/: condition_stack.rs  item.rs  machine.rs  mod.rs  stack.rs  value.rs
src/op_systems/: mod.rs  pokemon.rs  simple_math.rs
