[package]
name = "scriptful"
version = "0.1.0"
authors = ["The Scriptful Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/scriptful"
repository = "https://github.com/aesedepece/scriptful"
description = """
A minimalist, `no_std` stack machine library for executing domain specific interpreted languages.
"""
keywords = ["stack", "machine", "script", "turing-incomplete", "dsl"]
categories = ["parsing", "parser-implementations", "no-std"]
edition = "2018"

[badges]
travis-ci = { repository = "aesedepece/scriptful" }

[dependencies]
smallvec = "1.1.0"