[package]
name = "scriptful"
version = "0.3.1"
authors = ["The Scriptful Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/scriptful"
homepage = "https://github.com/aesedepece/scriptful"
repository = "https://github.com/aesedepece/scriptful"
description = """
A minimalist, `no_std` stack machine library for interpreting domain specific interpreted languages.
"""
keywords = ["stack", "machine", "script", "dsl"]
categories = ["parsing", "parser-implementations", "no-std"]
edition = "2021"

[badges]
travis-ci = { repository = "aesedepece/scriptful" }

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["codecs"]
codecs = []
use_serde = ["serde"]
